# vocalcoverage

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/vocalcoverage/: __init__.py  cli.py  decode.py  pipeline.py
tests/: conftest.py  test_decode.py  test_pipeline.py
